# EviL

./: .gitignore  CMakeLists.txt  EVIL.lst  Makefile  README.md  VERSION  evil.c  evil_banked.c  evil_banked.h  memory.txt  zcc_opt.def  zpragma.inc
BUILD-EVIL/: EVIL
Fonts/: 60s.ch8  CREDITS.txt  Envious Italic.ch8  Envious Serif Bold.ch8  Envious Serif.ch8  Envious.ch8  Magic5 Bold.ch8  Magic5.ch8  Magnetic.ch8  Minecraft.ch8  OCR-A.ch8  OCR-B.ch8  Plotter Bold.ch8  Plotter Condensed.ch8  Plotter.ch8
docs/: cloc.txt  error_codes.txt  evil.rc  settings.md
esxcuss/: libcuss.h
liblayer3/: clear.c  cleareol.c  getc.c  goto.c  liblayer3.h  newline.c  putc.c  puts.c  revoff.c  revon.c  textmode.h
src/: EVIL.lst  evil.c
src/BANK_command/: command.lst  error.c  error.h  file_name_set.c  file_name_set.h  file_save.c  file_save.h  parse.c  parse.h  status.c  status.h
src/BANK_fonts/: 60s.ch8.zx7  Courier.ch8.zx7  Envious Bold.ch8.zx7  Envious Italic.ch8.zx7  Envious Serif Bold.ch8.zx7  Envious Serif.ch8.zx7  Envious.ch8.zx7  Magic5 Bold.ch8.zx7  Magic5.ch8.zx7  Magnetic.ch8.zx7  Minecraft.ch8.zx7  OCR-A.ch8.zx7  OCR-B.ch8.zx7  Plotter Bold.ch8.zx7  Plotter Condensed.ch8.zx7  Plotter.ch8.zx7  cinema.asm  courier.asm  envious.asm  envious_bold.asm  envious_italic.asm  envious_serif.asm  envious_serif_bold.asm  fonts.lst  get.c  get.h  library.c  library.h  magic5.asm  magic5_bold.asm  magnetic.asm  minecraft.asm  ocr-a.asm  ocr-b.asm  picker.c  picker.h  plotter.asm  plotter_bold.asm  plotter_condensed.asm  set.c  (+3 more)
src/BANK_settings/: apply.c  apply.h  ini_common.c  ini_common.h  ini_get_line.c  ini_get_one.c  ini_set_one.c  load.c  load.h  settings.lst  show_errors.c  show_errors.h  string_is_false.c  string_is_false.h  string_is_true.c  string_is_true.h
src/BANK_spui/: any_key.c  any_key.h  bool_invalid.c  bool_invalid.h  button.c  button.h  common.c  common.h  dialog.c  dialog.h  error.c  error.h  font_invalid.c  font_invalid.h  font_not_found.c  font_not_found.h  line.c  line.h  not_zero.c  not_zero.h  spui.lst  triangle.c  triangle.h  unknown_setting.c  unknown_setting.h  window.c  window.h
src/BANK_system/: beep.c  beep.h  common.c  common.h  exit.c  exit.h  init.c  init.h  palette_apply.c  palette_apply.h  palette_restore.c  palette_restore.h  palette_save.c  palette_save.h  palette_set.c  palette_set.h  palettes.c  palettes.h  splash.c  splash.h  startup.c  system.h  system.lst  textmode_restore.c  textmode_restore.h  textmode_save.c  textmode_save.h
src/common/: build.h  create_dir.h  create_file.c  create_file.h  evil.h  file.c  file.h  memory.c  memory.h  ula.h
src/liblayer3/: clear.c  cleareol.c  getc.c  goto.c  liblayer3.h  newline.c  putc.c  puts.c  revoff.c  revon.c  textmode.asm  textmode.h
templates/: build_bottom.h  build_build.h  build_top.h  build_ver.h
